--- a/ezshare-frontend/src/index.css
+++ b/ezshare-frontend/src/index.css
@@ -20,6 +20,10 @@ h1, h2, h3 {
   text-transform: uppercase;
 }
 
+h2 {
+  margin-bottom: 0.3em;
+}
+
 .icon-spin {
   -webkit-animation: icon-spin 2s infinite linear;
           animation: icon-spin 2s infinite linear;
