--- a/packages/web/src/index.css
+++ b/packages/web/src/index.css
@@ -7,7 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   background: #f9f9f9;
-  color: rgba(0,0,0,0.8)
+  color: rgba(0,0,0,0.8);
+  overflow: hidden;
 }
 
 h1, h2, h3 {
